--- a/src/Pages/Dashboard/Dashboard.scss
+++ b/src/Pages/Dashboard/Dashboard.scss
@@ -79,6 +79,8 @@
   gap: 25px;
   margin-bottom: 25px;
   overflow: hidden;
+  scrollbar-width: none;
+
 }
 
 .card-left {
@@ -184,13 +186,17 @@
   width: 100%;
   border-collapse: collapse;
   overflow: hidden;
+  scrollbar-width: none;
+
 }
 
 .table-container {
   border-radius: 4px;
   border: 1px solid #27272A;
   // height: 77vh;
-   // overflow-y: auto;
+  // overflow-y: auto;
+  scrollbar-width: none;
+
 }
 
 .list-shift thead th,
